deplicatedなメソッドを使用しないように修正した